--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="me">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon_16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon_32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/favicon_180.png">
   <link rel="shortcut icon" sizes="196x192" href="/icons/favicon_196.png">
